--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: NodeJS
 
 on:
   push:
-    branches: [ "master", "${{ github.head_ref || github.ref_name }}" ]
+    branches: [ "master", ${{ github.head_ref || github.ref_name }} ]
   pull_request:
     branches: [ "master" ]
 
